add start loading layout

--- a/app/src/main/res/layout/layout_game_loading_animation.xml
+++ b/app/src/main/res/layout/layout_game_loading_animation.xml
@@ -8,5 +8,6 @@
         app:layout_constraintBottom_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/gif_loading"/>
+        android:clickable="false"
+        android:id="@+id/game_gif_loading"/>
 </android.support.constraint.ConstraintLayout>
