--- a/app/src/main/res/layout/activity_diary_mine_main.xml
+++ b/app/src/main/res/layout/activity_diary_mine_main.xml
@@ -61,9 +61,7 @@
             <TabWidget
                     android:id="@android:id/tabs"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:layout_height="wrap_content">
 
             </TabWidget>
 
