--- a/app/src/main/res/layout/layout_start_loading.xml
+++ b/app/src/main/res/layout/layout_start_loading.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/login_mid_gradient"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_boundary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
     <android.support.constraint.Guideline
         android:id="@+id/guide_start_horizontal"
         android:layout_width="wrap_content"
@@ -14,13 +21,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.18"/>
+        app:layout_constraintGuide_percent="0.17"/>
     <android.support.constraint.Guideline
         android:id="@+id/guide_start_vertical_pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.33"/>
+        app:layout_constraintGuide_percent="0.32"/>
     <ImageView
         android:id="@+id/start_logo_icon"
         android:layout_width="0dp"
