--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,9 @@
         android:textSize="20dp"
         android:layout_marginRight="20dp"
         android:text="Profile"
+        android:textStyle="bold"
+        android:fontFamily="@font/custom_font"
+        android:textColor="#2D446E"
         app:layout_constraintBottom_toBottomOf="@id/main_upper_view"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -41,6 +44,9 @@
         android:layout_height="wrap_content"
         android:text="Main Menu"
         android:textSize="20dp"
+        android:textStyle="bold"
+        android:fontFamily="@font/custom_font"
+        android:textColor="#2D446E"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toTopOf="@id/imageview_game_start"
         app:layout_constraintStart_toStartOf="@id/imageview_game_start" />
