--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -36,9 +36,7 @@
             android:textSize="20sp"
             android:layout_marginRight="20sp"
             android:text="Profile"
-            android:textStyle="bold"
-            android:fontFamily="@font/custom_font"
-            android:textColor="#0D0D59"
+            style="@style/CustomFontStyle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
     </android.support.constraint.ConstraintLayout>
@@ -68,9 +66,7 @@
                 android:text="My Image"
                 android:textAlignment="center"
                 android:gravity="center"
-                android:textStyle="bold"
-                android:fontFamily="@font/custom_font"
-                android:textColor="#0D0D59"/>
+                style="@style/CustomFontStyle"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -96,9 +92,7 @@
                 android:text="My Diary"
                 android:textAlignment="center"
                 android:gravity="center"
-                android:textStyle="bold"
-                android:fontFamily="@font/custom_font"
-                android:textColor="#0D0D59"/>
+                style="@style/CustomFontStyle"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
