--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:layout_marginRight="20sp"
             android:text="Profile"
             android:textStyle="bold"
@@ -59,7 +59,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@color/black_overlay"
-            android:clickable="true">
+            android:clickable="true"
+            android:onClick="diary_main_SwitchToLeft">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -70,15 +71,8 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:fontFamily="@font/custom_font"
-                android:textColor="#0D0D59"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.1"
-                android:background="@color/colorPrimary"
-                android:visibility="visible"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:textColor="#0D0D59"
+                android:clickable="false"/>
         </android.support.constraint.ConstraintLayout>
         <android.support.constraint.ConstraintLayout
             android:id="@+id/diary_main_TabBar_Right"
@@ -87,7 +81,8 @@
             app:layout_constraintWidth_percent="0.5"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:clickable="true">
+            android:clickable="true"
+            android:onClick="diary_main_SwitchToRight">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -98,16 +93,20 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:fontFamily="@font/custom_font"
-                android:textColor="#0D0D59"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.1"
-                android:background="@color/colorPrimary"
-                android:visibility="invisible"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:textColor="#0D0D59"
+                android:clickable="false"/>
         </android.support.constraint.ConstraintLayout>
+        <View
+            android:id="@+id/diary_main_TabBar_HighLight"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.1"
+            android:background="@color/colorPrimary"
+            android:visibility="visible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:clickable="false"/>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -117,15 +116,16 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar" />
+        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar"
+        android:background="#000000"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/diary_main_JourneyList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar" />
 
     <ImageButton
