--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -25,6 +25,7 @@
             android:src="@drawable/logo"
             android:scaleType="fitCenter"
             android:padding="0dp"
+            android:background="#00000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -87,15 +88,17 @@
                 android:textAlignment="center"
                 android:gravity="center"
                 style="@style/CustomFontStyle"/>
-            <View
-                android:id="@+id/diary_main_TabBar_HighLight"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.1"
-                android:background="@color/colorPrimary"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+
         </android.support.constraint.ConstraintLayout>
+        <View
+            android:id="@+id/diary_main_TabBar_HighLight"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.1"
+            android:background="@color/colorPrimary"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -105,8 +108,7 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar"
-        android:background="#000000"/>
+        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/diary_main_JourneyList"
