--- a/app/src/main/res/layout/layout_diary_row.xml
+++ b/app/src/main/res/layout/layout_diary_row.xml
@@ -7,6 +7,7 @@
     android:clickable="false">
 
     <ImageView
+        android:id="@+id/diary_Row_Thumbnail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="2:1"
@@ -46,13 +47,13 @@
             app:layout_constraintWidth_percent="0.8"
             app:layout_constraintHeight_percent="0.3"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/diary_row_TitleMargin"
+            app:layout_constraintBottom_toTopOf="@id/diary_Row_TitleMargin"
             android:text="1970.01.01 ~ 1970.01.01"
             android:textStyle="italic"
             android:textColor="#FFFFFF"
             android:textSize="15sp"/>
         <View
-            android:id="@+id/diary_row_TitleMargin"
+            android:id="@+id/diary_Row_TitleMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.1"
