--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".provider.LoginActivity">
 
     <View
         android:layout_width="match_parent"
@@ -78,12 +80,12 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/CustomFontStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="── Sign in with ──"
         android:textAlignment="center"
         android:textSize="14pt"
-        style="@style/CustomFontStyle"
         app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -110,35 +112,33 @@
         app:layout_constraintTop_toBottomOf="@id/imageview_login_id_icon" />
 
     <EditText
-        android:id="@+id/et_email"
+        android:id="@+id/et_login"
+        style="@style/CustomFontStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="ID"
-        style="@style/CustomFontStyle"
+        android:hint="ID"
         app:layout_constraintLeft_toRightOf="@id/imageview_login_id_icon"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
         app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_edit_text" />
 
     <EditText
         android:id="@+id/et_password"
+        style="@style/CustomFontStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="password"
-        style="@style/CustomFontStyle"
+        android:hint="password"
         app:layout_constraintLeft_toRightOf="@id/imageview_login_pw_icon"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
-        app:layout_constraintTop_toBottomOf="@id/et_email" />
+        app:layout_constraintTop_toBottomOf="@id/et_login" />
 
     <ImageView
         android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:onClick="onLogin"
-        android:text="LOGIN"
         android:src="@drawable/login_login_btn"
         android:clickable="true"
         app:layout_constraintDimensionRatio="W,1:4"
@@ -147,11 +147,9 @@
         app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_mid" />
 
     <ImageView
-        android:id="@+id/btnAccount"
+        android:id="@+id/btn_account"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:onClick="onRegister"
-        android:text="NEW ACCOUNT"
         android:src="@drawable/login_register_btn"
         android:clickable="true"
         app:layout_constraintDimensionRatio="W,1:4"
@@ -160,12 +158,10 @@
         app:layout_constraintTop_toBottomOf="@id/btn_login" />
 
     <ImageView
-        android:id="@+id/btnForget"
+        android:id="@+id/btn_forgot"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:onClick="onForget"
         android:src="@drawable/login_forget_btn"
-        android:text="FORGET YOUR PASSWORD?"
         android:clickable="true"
         app:layout_constraintDimensionRatio="W,1:4"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
