--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -101,7 +101,7 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <kr.ac.kw.coms.globealbum.album.GroupDiaryView
         android:id="@+id/diary_main_ImageList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -109,15 +109,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar">
-    </android.support.v7.widget.RecyclerView>
+    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/diary_main_JourneyList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar" />
 
     <ImageButton
@@ -188,5 +188,51 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/diary_main_menuEdit" />
         </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_main_ZoomInRoot"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black_overlay"
+        android:clickable="true"
+        android:onClick="diary_main_CloseZoomIn"
+        android:visibility="invisible">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="20dp">
+            <ImageView
+                android:id="@+id/diary_main_ZoomImage"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="#888888"
+                android:clickable="true"/>
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/diary_main_ZoomImage"
+                android:layout_marginTop="15dp">
+                <TextView
+                    android:id="@+id/diary_main_ZoomName"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="------"
+                    android:textSize="40dp"
+                    android:layout_marginHorizontal="20dp"/>
+            </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
+:
+
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
