--- a/app/src/main/res/layout/layout_diary_row.xml
+++ b/app/src/main/res/layout/layout_diary_row.xml
@@ -18,6 +18,7 @@
         android:clickable="true"
         />
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_Row_NameTag"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.35"
