--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,8 @@
         app:layout_constraintBottom_toTopOf="@id/down_space"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/up_space" />
+        app:layout_constraintTop_toBottomOf="@id/up_space"
+        android:onClick="startOnClick"/>
     <Space
         android:id="@+id/down_space"
         android:layout_width="0dp"
@@ -100,7 +101,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/down_space" />
+        app:layout_constraintTop_toBottomOf="@id/down_space"
+        android:onClick="startOnClick"/>
 
 
     <LinearLayout
