--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -77,6 +77,7 @@
             app:layout_constraintWidth_percent="0.5"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/black_overlay"
             android:clickable="true"
             android:onClick="diary_main_SwitchToRight">
             <TextView
