--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -1,129 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?><!DOCTYPE android.support.constraint.ConstraintLayout>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:id="@+id/diary_mapNpics_Root"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             tools:context=".diary.Diary_mapNPictures">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/diary_mapNpics_Root"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".diary.Diary_mapNPictures">
 
     <android.support.constraint.ConstraintLayout
-            android:id="@+id/diary_mapNpics_ViewLayout"
-            android:layout_width="match_parent"
+        android:id="@+id/diary_mapNpics_Toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/upper_bar"
+        app:layout_constraintHeight_percent="0.065"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/diary_mapNpics_Back"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/logo"
+            android:scaleType="fitCenter"
+            android:padding="0dp"
+            android:background="#00000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <TextView
+            style="@style/CustomFontStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:layout_marginRight="20dp"
+            android:text="Profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_mapNpics_ViewLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Toolbar"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_mapNpics_TitleBox"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.065"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.constraint.ConstraintLayout
-                android:id="@+id/diary_mapNpics_MapFrame"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:padding="10dp"
-                app:layout_constraintHeight_percent="0.5"
+            <TextView
+                android:id="@+id/diary_mapNpics_Title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:hint="제목"
+                android:gravity="center_vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <android.support.constraint.ConstraintLayout
-                    android:id="@+id/diary_mapNpics_TitleBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="5dp"
-                    app:layout_constraintHeight_percent="0.15"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                        android:id="@+id/diary_mapNpics_TitleImage"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/diary"
-                        android:background="#00000000"
-                        android:scaleType="centerCrop"
-                        app:layout_constraintDimensionRatio="1:1"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                <TextView
-                        android:id="@+id/diary_mapNpics_Title"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:text="Title"
-                        android:gravity="center_vertical"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
-                        app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                <ImageButton
-                        android:id="@+id/diary_mapNpics_EditStart"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/pen"
-                        android:padding="5dp"
-                        android:scaleType="centerCrop"
-                        android:background="#00000000"
-                        android:visibility="visible"
-                        android:onClick="diary_onEditClick"
-                        app:layout_constraintDimensionRatio="1:1"
-                        app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                <ImageButton
-                        android:id="@+id/diary_mapNpics_TitleLike"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/heartgrey"
-                        android:background="#00000000"
-                        android:scaleType="centerCrop"
-                        android:onClick="diary_onLikeClick"
-                        app:layout_constraintDimensionRatio="1:1"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-            </android.support.constraint.ConstraintLayout>
-
-
-            <kr.ac.kw.coms.globealbum.map.MyMapView
-                    android:id="@+id/diary_mapNpics_Map"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:padding="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox"/>
+            <ImageButton
+                android:id="@+id/diary_mapNpics_EditStart"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/pen"
+                android:padding="5dp"
+                android:scaleType="centerCrop"
+                android:background="#00000000"
+                android:visibility="visible"
+                android:onClick="diary_onEditClick"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
+        <kr.ac.kw.coms.globealbum.map.MyMapView
+            android:id="@+id/diary_mapNpics_Map"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:padding="10dp"
+            app:layout_constraintDimensionRatio="16:9"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox" />
 
         <kr.ac.kw.coms.globealbum.album.GroupDiaryView
-                android:id="@+id/diary_mapNpics_Pics"
-                android:layout_width="0dp"
-                android:layout_marginHorizontal="10dp"
-                android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.15"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_MapFrame">
-
-        </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+            android:id="@+id/diary_mapNpics_Pics"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="10dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.15"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Map" />
 
         <TextView
-                android:id="@+id/diary_mapNpics_Description"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:hint="내용"
-                android:layout_margin="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics"/>
+            android:id="@+id/diary_mapNpics_Description"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:hint="내용"
+            android:layout_margin="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics" />
     </android.support.constraint.ConstraintLayout>
 
+
     <include
-            android:id="@+id/diary_mapNpics_EditLayout"
-            layout="@layout/activity_diary_edit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        android:id="@+id/diary_mapNpics_EditLayout"
+        layout="@layout/activity_diary_edit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
