--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -1,108 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             tools:context=".diary.Diary_Edit">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".diary.Diary_Edit">
+
     <android.support.constraint.ConstraintLayout
-            android:id="@+id/diary_edit_topbar"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorPrimary">
+        android:id="@+id/diary_edit_topbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/upper_bar"
+        app:layout_constraintHeight_percent="0.065"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageButton
-                android:id="@+id/diary_edit_btnBack"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:background="#00000000"
-                android:src="@drawable/arrow_left"
-                android:scaleType="fitCenter"
-                android:onClick="diary_edit_onClick"
-        />
+            android:id="@+id/diary_edit_btnBack"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/logo"
+            android:scaleType="fitCenter"
+            android:padding="0dp"
+            android:background="#00000000"
+            android:onClick="diary_edit_onClick"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toRightOf="@id/diary_edit_btnBack"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:textColor="#FFFFFF"
-                android:text="편집"/>
+            style="@style/CustomFontStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="편집"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/diary_edit_btnBack"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageButton
-                android:id="@+id/diary_edit_btnSave"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/confirm"
-                android:background="#00000000"
-                android:onClick="diary_edit_onClick"/>
+            android:id="@+id/diary_edit_btnSave"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="15dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/save"
+            android:background="#00000000"
+            android:onClick="diary_edit_onClick"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
-    <TextView
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_edit_topbar">
+
+        <TextView
             android:id="@+id/diary_edit_titleLabel"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_topbar"
-            app:layout_constraintBottom_toBottomOf="@id/diary_edit_TitleText"
             android:gravity="center_vertical"
             android:layout_marginStart="10dp"
-            android:text="제목"/>
-    <EditText
+            android:text="제목"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="@id/diary_edit_TitleText"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/diary_edit_TitleText" />
+
+        <EditText
             android:id="@+id/diary_edit_TitleText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/diary_edit_titleLabel"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_topbar"
             android:layout_marginHorizontal="10dp"
-            android:maxLines="1"/>
-    <TextView
+            android:maxLines="1"
+            android:textSize="20dp"
+            app:layout_constraintLeft_toRightOf="@id/diary_edit_titleLabel"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/diary_edit_listLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="사진 목록"
+            android:textSize="20dp"
+            android:layout_marginVertical="15dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_TitleText"/>
-    <android.support.v7.widget.RecyclerView
+            app:layout_constraintTop_toBottomOf="@id/diary_edit_TitleText" />
+
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/diary_edit_ImageList"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/diary_edit_divider"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_listLabel"
-            app:layout_constraintBottom_toTopOf="@id/diary_edit_DescriptionText">
+            app:layout_constraintTop_toBottomOf="@id/diary_edit_listLabel">
 
-    </android.support.v7.widget.RecyclerView>
-    <View
+        </android.support.v7.widget.RecyclerView>
+
+        <View
             android:id="@+id/diary_edit_divider"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_ImageList"
-            app:layout_constraintBottom_toTopOf="@id/diary_edit_descriptionLabel"
             android:background="#000000"
-    />
-    <TextView
-            android:id="@+id/diary_edit_descriptionLabel"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:layout_marginVertical="15dp"
+            app:layout_constraintBottom_toTopOf="@id/diary_edit_descriptionLabel"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_divider"
+            app:layout_constraintTop_toBottomOf="@id/diary_edit_ImageList" />
+
+        <TextView
+            android:id="@+id/diary_edit_descriptionLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="내용"
+            android:textSize="20dp"
             app:layout_constraintBottom_toTopOf="@id/diary_edit_DescriptionText"
-    android:text="내용"/>
-    <EditText
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_edit_divider" />
+
+        <EditText
             android:id="@+id/diary_edit_DescriptionText"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.3"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintLeft_toLeftOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
