--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
@@ -1,59 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="wrap_content"
-                                             app:layout_constraintHeight_percent="0.2"
-                                             android:id="@+id/verticalList_Root">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/verticalList_Root"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintHeight_percent="0.2">
+
     <Button
-            android:id="@+id/verticalList_MoveUp"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/verticalList_MoveDown"
-            app:layout_constraintRight_toRightOf="@id/verticalList_MoveDown"
-            android:text="위로"/>
+        android:id="@+id/verticalList_MoveUp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="위로"
+        app:layout_constraintBottom_toTopOf="@id/verticalList_MoveDown"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/verticalList_MoveDown"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
-            android:id="@+id/verticalList_MoveDown"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/verticalList_MoveUp"
-            android:text="아래로"/>
+        android:id="@+id/verticalList_MoveDown"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="아래로"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/verticalList_MoveUp" />
+
     <ImageView
-            android:id="@+id/verticalList_Image"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintWidth_percent="0.25"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintLeft_toRightOf="@id/verticalList_MoveDown"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/blank"
-            android:scaleType="centerCrop"/>
+        android:id="@+id/verticalList_Image"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/blank"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintLeft_toRightOf="@id/verticalList_MoveDown"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.25" />
+
     <TextView
-            android:id="@+id/verticalList_Title"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:layout_constraintLeft_toRightOf="@id/verticalList_Image"
-            app:layout_constraintRight_toLeftOf="@id/verticalList_Delete"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:gravity="center_vertical"
-            android:text="IMAGE"/>
-    <Button
-            android:id="@+id/verticalList_Delete"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintWidth_percent="0.15"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="제거"/>
+        android:id="@+id/verticalList_Title"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:text="IMAGE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/verticalList_Image"
+        app:layout_constraintRight_toLeftOf="@id/verticalList_Delete"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/verticalList_Delete"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        android:background="#00000000"
+        android:src="@drawable/delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.15" />
 
 </android.support.constraint.ConstraintLayout>
